bk_ida/gccida/c3/pushlevel
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pushlevel/src/c-decl.c:1405:12: error: expected expression
*( _OWORD *)&v1->parm_flag = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pushlevel/src/c-decl.c:1405:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->parm_flag = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pushlevel/src/c-decl.c:1406:12: error: expected expression
*( _OWORD *)&v1->this_block = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pushlevel/src/c-decl.c:1406:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->this_block = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pushlevel/src/c-decl.c:1407:12: error: expected expression
*( _OWORD *)&v1->shadowed = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pushlevel/src/c-decl.c:1407:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->shadowed = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pushlevel/src/c-decl.c:1408:12: error: expected expression
*( _OWORD *)&v1->names = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pushlevel/src/c-decl.c:1408:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->names = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pushlevel/src/obj/c-decl.o] Error 1
